@@ -2,7 +2,9 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? Jan 2007, PHP 5.2.1RC3
 - Improved proc_open(). Now on Windows it can run external commands not through
-  CMD.EXE. (Dmitry)  
+  CMD.EXE. (Dmitry)
+- Fixed bug #40076 (zend_alloc.c: Value of enumeration constant must be in
+  range of signed integer). (Dmitry)
 - Fixed bug #40036 (empty() does not work correctly with ArrayObject when using
   ARRAY_AS_PROPS). (Ilia)
 - Fixed bug #40002 (Try/Catch performs poorly). (Dmitry)
